--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -199,7 +199,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="left">По левому краю</string>
     <string name="right">По правому краю</string>
     <string name="top">По верхнему краю</string>
-    <string name="bottom">По нижнему краю</string>
+    <string name="bottom">Снизу</string>
     <string name="center">Центр</string>
     <string name="textaction_spacing">Расстояние между кнопками</string>
     <string name="horizontal_space_between_textactions">Пространство между кнопками управления текстом</string>
