[ci skip] Update translations (Thai)

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -9,7 +9,7 @@ to the public domain.
 You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="settings">การตั้งค่าโปรไฟล์</string>
     <string name="light">สว่าง</string>
     <string name="rename">เปลี่ยนชื่อ</string>
