[ci skip] Update translations (Spanish)

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -137,9 +137,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overall_theme_used_in_app">El tema principal usado en la app</string>
     <string name="remember_last_directory">Recordar última carpeta</string>
     <string name="syntax_highlighting">Resaltado de sintaxis</string>
+    <string name="dynamic_highlighting">Resaltado dinámico</string>
     <string name="highlighting_delay">Retraso para resaltar</string>
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Retraso en milisegundos para refrescar el resaltado. Un valor menor iniciará el énfasis pronto, pero afectará a la batería y al desempeño en equipos antiguos.</string>
     <string name="highlighting_enabled_or_not__appspecific">Controla si el texto ingresado debe ser resaltado o no</string>
+    <string name="dynamic_highlighting_effect">El resaltado dinámico aumenta el rendimiento. Puede causar el procesamiento de artefactos.</string>
     <string name="control_font_size_in_editor">Edita el tamaño de fuente usada en el editor</string>
     <string name="textactions_show_useful_actions_description__appspecific">Muestra una barra con funciones útiles para insertar módulos de texto comúnmente usados</string>
     <string name="load_last_opened_folder_at_startup">Cargar la última carpeta abierta al iniciar</string>
