--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -137,9 +137,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overall_theme_used_in_app">Tema complessivo usato nell\'applicazione</string>
     <string name="remember_last_directory">Ricorda l\'ultima cartella</string>
     <string name="syntax_highlighting">Evidenziazione della sintassi</string>
+    <string name="dynamic_highlighting">Evidenziazione dinamica</string>
     <string name="highlighting_delay">Ritardo dell\'evidenziazione</string>
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Ritardo in millisecondi per l\'aggiornamento dell\'evidenziazione. Un valore basso evidenzierà prima, ma consumerà più batteria e potrà diminuire le prestazioni nei dispositivi più vecchi.</string>
     <string name="highlighting_enabled_or_not__appspecific">Controlla quando il testo deve essere evidenziato o meno</string>
+    <string name="dynamic_highlighting_effect">L\'evidenziazione dinamica aumenta le prestazioni. Può causare artefatti di rendimento.</string>
     <string name="control_font_size_in_editor">Controlla la dimensione del font usato nell\'editor</string>
     <string name="textactions_show_useful_actions_description__appspecific">Mostra una barra in basso con alcuni pulsanti utili, per modificare il testo o lanciare un\'azione basata sul testo.</string>
     <string name="load_last_opened_folder_at_startup">Apri l\'ultima cartella aperta all\'avvio</string>
