[ci skip] Update translations (Romanian)

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -137,9 +137,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overall_theme_used_in_app">Tema generală utilizată în aplicație</string>
     <string name="remember_last_directory">Memorează ultimul director</string>
     <string name="syntax_highlighting">Evidențiere sintaxă</string>
+    <string name="dynamic_highlighting">Evidență dinamică</string>
     <string name="highlighting_delay">Întârziere evidenţiere</string>
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Întârziere în milisecunde pentru evidențierea reîmprospătării. O valoare mai mică va începe să evidențieze mai devreme, dar va consuma bateria și poate încetini aplicația pe dispozitive mai vechi.</string>
     <string name="highlighting_enabled_or_not__appspecific">Controlul dacă textul introdus trebuie evidențiat sau nu</string>
+    <string name="dynamic_highlighting_effect">Dinamic care evidențiază creșterea performanței. Poate cauza redarea artefactelor.</string>
     <string name="control_font_size_in_editor">Controlează dimensiunea fontului folosită în editor</string>
     <string name="textactions_show_useful_actions_description__appspecific">Afișează o bară cu butoane utile în partea de jos. Aceste acțiuni de text modifică textul sau execută o acțiune bazată pe text.</string>
     <string name="load_last_opened_folder_at_startup">Încarcă ultimul dosar deschis la pornire</string>
@@ -346,7 +348,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Titlu3</string>
     <string name="heading_4">Titlu4</string>
     <string name="heading_5">Titlu5</string>
-    <string name="heading_6">Titlu6</string>
+    <string name="heading_6">Subtitlu 6</string>
     <string name="bold">Bold</string>
     <string name="italic">Italic</string>
     <string name="highlighted">Evident</string>
