--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -137,9 +137,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overall_theme_used_in_app">Загальна тема додатку</string>
     <string name="remember_last_directory">Пам\'ятати останню директорію</string>
     <string name="syntax_highlighting">Підсвічування синтаксису</string>
+    <string name="dynamic_highlighting">Динамічне підсвічування</string>
     <string name="highlighting_delay">Затримка підсвічування</string>
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Затримка оновлення підсвітки синтаксису у мілісекундах. Нижчі значення пришвидшують оновлення, проте підвищують витрату заряду батареї та можуть сповільнити роботу додатку на старіших пристроях.</string>
     <string name="highlighting_enabled_or_not__appspecific">Встановлює наявність підсвітки синтаксису тексту</string>
+    <string name="dynamic_highlighting_effect">Динамічне підсвічування збільшує продуктивність. Може призвести до створення артефактів.</string>
     <string name="control_font_size_in_editor">Задає розмір шрифту для тексту в редакторі</string>
     <string name="textactions_show_useful_actions_description__appspecific">Показувати панель знизу із зручними кнопками команд тексту, які перетворюють його або виконують відповідну дію.</string>
     <string name="load_last_opened_folder_at_startup">Завантажити останню відкриту директорію після запуску</string>
