Pre-merge file metadata extractor, utility improvements, WebView fullscreen function, reformat code, by @gsantner #1806 #1200

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="error_cannot_create_notebook_dir__appspecific">Error: Cannot create notebook directory</string>
 
     <string name="last_modified_witharg">Last modified: %s</string>
+    <string name="last_modified">Last modified</string>
     <string name="select_this_folder">Select this folder</string>
     <string name="select">Select</string>
     <string name="create">Create</string>
@@ -331,6 +332,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">Recursive search in current directory.</string>
     <string name="always_open_with_this_app">Always open with this app</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Always open files with this app when the list contains the file extension. Use \'None, .html, .css , .js\' for example if you want to edit web files and those without file extension.</string>
+    <string name="rotate">Rotate</string>
     <string name="template">Template</string>
     <string name="send_debug_log">Send Debug Log</string>
     <string name="print_pdf">Print / PDF</string>
