[ci skip] Update translations (Hindi)

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -187,6 +187,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourites">पसंदीदा</string>
     <string name="please_wait">कृपया प्रतीक्षा करें</string>
     <string name="reload">फिर से लोड करें</string>
+    <string name="rotate">घुमये</string>
     <string name="template">खाका</string>
     <string name="send_debug_log">डिबग लग्स को भेजें</string>
     <string name="print_pdf">PDF प्रिंट करें</string>
