[ci skip] Update translations (Esperanto)

--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -176,6 +176,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="favourites">Plej ŝatataj</string>
     <string name="please_wait">Bonvolu atendi</string>
     <string name="tab_width">Taba larĝo</string>
+    <string name="rotate">Rotaci</string>
     <string name="template">Ŝablono</string>
     <string name="print_pdf">Presi / PDF</string>
     <string name="current">Nuna</string>
