--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">Visa för höger till vänster-språk</string>
     <string name="error_cannot_create_notebook_dir__appspecific">Fel: Kan inte skapa sparningsmapp</string>
     <string name="last_modified_witharg">Senast ändrad: %s</string>
+    <string name="last_modified">Senast ändrad</string>
     <string name="select_this_folder">Välj den här mappen</string>
     <string name="select">Välj</string>
     <string name="create">Skapa</string>
@@ -316,6 +317,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">Rekursiv sökning i aktuell katalog.</string>
     <string name="always_open_with_this_app">Öppna alltid med denna app</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Öppna alltid filer med filtyperna i listan med den här appen. Använd till exempel \'None, .html, .css , .js\' om du vill redigera webbfiler och filer utan filändelse.</string>
+    <string name="rotate">Rotera</string>
     <string name="template">Mall</string>
     <string name="send_debug_log">Skicka felsökningslogg</string>
     <string name="print_pdf">Print / PDF</string>
