[ci skip] Update translations (Arabic)

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">عرض للغات المكتوبة مِن اليمين إلى اليسار</string>
     <string name="error_cannot_create_notebook_dir__appspecific">خطأ: لا يمكن إنشاء مجلد دفتر الملاحظات</string>
     <string name="last_modified_witharg">آخر تعديل: %s</string>
+    <string name="last_modified">آخر تعديل</string>
     <string name="select_this_folder">اختر هذا المجلد</string>
     <string name="select">اختيار</string>
     <string name="create">إنشاء</string>
@@ -316,6 +317,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">البحث المتكرر في الدليل الحالي.</string>
     <string name="always_open_with_this_app">افتحه دائما بهذا التطبيق</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">فتح الملفات دائما مع هذا التطبيق عندما تحتوي القائمة على امتداد الملف. استخدم \'لا شيء، .html. .js\' على سبيل المثال إذا كنت ترغب في تحرير ملفات الويب وتلك التي ليس لها امتداد للملف.</string>
+    <string name="rotate">تدوير</string>
     <string name="template">النموذج</string>
     <string name="send_debug_log">إرسال سِجل للأخطاء</string>
     <string name="print_pdf">طباعة/PDF</string>
