--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">Vykreslovat pro right-to-left jazyky</string>
     <string name="error_cannot_create_notebook_dir__appspecific">Error: Nelze vytvořit složku pro notebook</string>
     <string name="last_modified_witharg">Naposledy změněno: %s</string>
+    <string name="last_modified">Naposledy upraveno</string>
     <string name="select_this_folder">Vybrat tuto složku</string>
     <string name="select">Vybrat</string>
     <string name="create">Vytvoøit</string>
@@ -316,6 +317,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">Rekurentní vyhledávání v aktuální složce.</string>
     <string name="always_open_with_this_app">Vždy otvírat pomocí této aplikace</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Vždy otvírat soubory touto aplikací, pokud mají příponu souboru z následujícího seznamu. Použijte \'None, .html, .css , .js\' pokud například chcete upravovat webové soubory a soubory bez přípony souboru.</string>
+    <string name="rotate">Otoèit</string>
     <string name="template">Šablona</string>
     <string name="send_debug_log">Odeslat protokol ladění</string>
     <string name="print_pdf">Tisk / PDF</string>
