[ci skip] Update translations (Japanese)

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">右から左に言語を描画</string>
     <string name="error_cannot_create_notebook_dir__appspecific">エラー: ノートディレクトリーを作成できません</string>
     <string name="last_modified_witharg">最終更新: %s</string>
+    <string name="last_modified">最終更新日時</string>
     <string name="select_this_folder">このフォルダーを選択</string>
     <string name="select">選択</string>
     <string name="create">作成</string>
@@ -316,6 +317,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">現在のディレクトリの再帰的な検索。</string>
     <string name="always_open_with_this_app">いつもこのアプリで開く</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">リストにファイル拡張子が含まれている場合は、常にこのアプリでファイルを開きます。 たとえば、Webファイルやファイル拡張子のないファイルを編集したい場合は、 \'なし, .html, .css , .js\' を使用してください。</string>
+    <string name="rotate">回転</string>
     <string name="template">テンプレート</string>
     <string name="send_debug_log">デバッグログを送信</string>
     <string name="print_pdf">印刷 / PDF</string>
